# nss-dontstalkme

./: .gitignore  Makefile.am  README  configure.ac
debian/: changelog  control  copyright  gbp.conf  libnss-dontstalkme.lintian-overrides  postinst  postrm  rules
debian/tests/: control  smoke
src/: Makefile.am  nss-dontstalkme.c
